<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/recip"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:inputType="number" />

    <EditText
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirm"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/description_textview"
        android:inputType="textCapWords" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm" />

    <EditText
        android:id="@+id/recip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/number"
        android:layout_toRightOf="@+id/description_textview"
        android:inputType="number" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/number_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/number"
        android:layout_alignBottom="@+id/number"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dip"
        android:text="@string/number" />

    <TextView
        android:id="@+id/recipient_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/recip"
        android:layout_alignBottom="@+id/recip"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dip"
        android:text="@string/recip" />

    <TextView
        android:id="@+id/description_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/recipient_textview"
        android:layout_below="@+id/recip"
        android:layout_marginTop="32dp"
        android:text="@string/description" />

</RelativeLayout>